Text change from Google to Gmail

--- a/Google.html
+++ b/Google.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head> 
 		<link type="text/css" rel="CSS" href="/CSS"/>
-		<title id="MainTitle">Google</title>
+		<title id="MainTitle"> </title>
 	</head>
 		<body>
-			<div style="height:233px,margin-top:89px" id="Top"> 
-                <p>Google</p>
+			<div id="Top"> 
+                <p>Gmail</p>
 			</div>
 		
 		</body>
