Ready to push to main

--- a/Google.html
+++ b/Google.html
@@ -5,10 +5,43 @@
 		<title id="MainTitle"> </title>
 	</head>
 		<body>
-			<div id="Top"> 
-                <p>Gmail</p>
+			<div id="TopGmail"> 
+                <table>
+                	<tr>
+                		<td class="tGmail">Gmail</td>
+                		<div> </div>
+                		<td class ="tImages">Images</td>
+                	</tr>
+                </table>
+            </div>
+				
+			<div class="logo">
+				<img style="padding-top:112px" 
+					height="92" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" 
+					width="272"/>
 			</div>
-		
+			<div>
+				<form action=”” method=”” name=”” >
+					<input type=”Search” name=”Search” class="Search"><br>
+				</form>
+			</div>
+				
+			<div id="history"> 
+				<table>
+					<tr>
+						<td class="history"> </td>
+						<td class="history"> </td>
+						<td class="history"> </td>
+						<td class="history"> </td>
+					</tr>
+					<tr>
+						<td class="history"> </td>
+						<td class="history"> </td>
+						<td class="history"> </td>
+						<td class="history"> </td>
+					</tr>
+				</table>
+			</div>
 		</body>
 	<footer> </footer>
 </html>
